--- a/src/layout/header.pug
+++ b/src/layout/header.pug
@@ -1,1 +1,10 @@
 header.header
+  .container
+    .header__content
+      include ../assets/img/logo.svg
+      nav.nav
+        a.link.link--active(href="#") Blog
+        a.link(href="#") About
+        a.link(href="#") Products
+        a.link(href="#") The Academy
+        a.link(href="#") Contact US
