--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,6 +1,9 @@
 $container-desktop-width: 1189px;
+$slider-width: 1856px;
+
 $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
 
 $bg-color: #F9F9F9;
 $primary-color: #263843;
 $text-color: #768791;
+$red: #F5381A;
